--- a/html/document.html
+++ b/html/document.html
@@ -7,6 +7,9 @@
         @page {
             size: A4
         }
+        body{
+            font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+        }
         .top-section{
             height: 15%;
         }
@@ -34,7 +37,11 @@
     <!-- Each sheet element should have the class "sheet" -->
     <!-- "padding-**mm" is optional: you can set 10, 15, 20 or 25 -->
     <section class="sheet">
-        <div class="top-section">noodle</div>
+        <div class="top-section">
+            <h1>Ravinder Bahra</h1>
+            <h3>Systems Engineer</h3>
+
+        </div>
 
         <div class="left-content"></div>
         <div class="right-content"></div>
